fix bg position on tablet

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -235,7 +235,7 @@ a {
     height: 420px;
     max-height: 50vh;
     min-height: auto;
-    background-position: 50% calc(50% - 10vh);
+    background-position: 50% calc(50% - 5vh);
   }
 }
 
